[gd_scene load_steps=39 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://PlayerMe.gd" type="Script" id=2]
[ext_resource path="res://switch7.wav" type="AudioStream" id=3]
[ext_resource path="res://BodyObjects.gd" type="Script" id=4]
[ext_resource path="res://hiss.wav" type="AudioStream" id=5]
[ext_resource path="res://headmesh.tscn" type="PackedScene" id=6]
[ext_resource path="res://HandScript.gd" type="Script" id=7]
[ext_resource path="res://Rope.gd" type="Script" id=8]
[ext_resource path="res://Boat.gd" type="Script" id=9]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 3 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.129412, 0.858824, 0.172549, 1 )

[sub_resource type="CylinderMesh" id=24]
top_radius = 0.4
bottom_radius = 0.5
height = 1.0

[sub_resource type="QuadMesh" id=3]
size = Vector2( 10, 10 )

[sub_resource type="OpenSimplexNoise" id=4]
octaves = 1
period = 11.6
persistence = 0.634
lacunarity = 2.16

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.156863, 0.960784, 0.941176, 1 )
albedo_texture = SubResource( 5 )

[sub_resource type="PlaneMesh" id=25]
size = Vector2( 5, 5 )
subdivide_width = 20
subdivide_depth = 20

[sub_resource type="Shader" id=26]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

uniform vec2 amplitude = vec2(0.2, 0.1);
uniform vec2 frequency = vec2(3.0, 2.5);
uniform vec2 time_factor = vec2(2.0, 3.0);

float height(vec2 pos, float time) {
	return (amplitude.x * sin(pos.x * frequency.x + time * time_factor.x)) + (amplitude.y * sin(pos.y * frequency.y + time * time_factor.y));
}

void vertex() {
	VERTEX.y += height(VERTEX.xz, TIME); // sample the height at the location of our vertex
	TANGENT = normalize(vec3(0.0, height(VERTEX.xz + vec2(0.0, 0.2), TIME) - height(VERTEX.xz + vec2(0.0, -0.2), TIME), 0.4));
	BINORMAL = normalize(vec3(0.4, height(VERTEX.xz + vec2(0.2, 0.0), TIME) - height(VERTEX.xz + vec2(-0.2, 0.0), TIME ), 0.0));
	NORMAL = cross(TANGENT, BINORMAL);
}




void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )
shader_param/albedo = Color( 0.156863, 0.772549, 0.960784, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/amplitude = Vector2( 0.2, 0.1 )
shader_param/frequency = Vector2( 3, 2.5 )
shader_param/time_factor = Vector2( 2, 3 )
shader_param/texture_albedo = SubResource( 5 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.2, 0.2, 0.4 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.4, 0.4, 0.8 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.94902, 0.243137, 0.054902, 1 )

[sub_resource type="BoxShape" id=10]
margin = 0.004
extents = Vector3( 0.01, 0.01, 0.01 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 0.03, 0.03, 0.03 )

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.458824, 0.313726, 0.0862745, 1 )

[sub_resource type="CapsuleShape" id=13]
margin = 0.004
radius = 0.01
height = 0.04

[sub_resource type="CapsuleMesh" id=14]
radius = 0.009
mid_height = 0.04

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.0431373, 0.960784, 0.898039, 1 )

[sub_resource type="SphereShape" id=16]
margin = 0.004
radius = 0.01

[sub_resource type="SphereMesh" id=17]
radius = 0.01
height = 0.02

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.0901961, 0.145098, 0.435294, 1 )

[sub_resource type="CylinderMesh" id=19]
top_radius = 0.001
bottom_radius = 0.01
height = 0.05
radial_segments = 32
rings = 1

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 0.952941, 0.0196078, 0.0196078, 1 )

[sub_resource type="SpatialMaterial" id=21]
albedo_color = Color( 0.121569, 0.968627, 0.027451, 1 )
metallic = 0.41
roughness = 0.41

[sub_resource type="CubeMesh" id=22]
size = Vector3( 0.02, 0.002, 10 )

[sub_resource type="SpatialMaterial" id=23]
albedo_color = Color( 0.964706, 0, 0, 1 )

[sub_resource type="SphereMesh" id=28]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=29]
emission_enabled = true
emission = Color( 0.92549, 0.952941, 0.0352941, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="Main" type="Spatial"]
script = ExtResource( 1 )
hostipnumber = "192.168.1.127"

[node name="Players" type="Spatial" parent="."]

[node name="PlayerMe" type="ARVROrigin" parent="Players"]
script = ExtResource( 2 )

[node name="HeadCam" type="ARVRCamera" parent="Players/PlayerMe"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.817369, 0.460983 )

[node name="csgheadmesh" parent="Players/PlayerMe/HeadCam" instance=ExtResource( 6 )]

[node name="HandLeftController" type="ARVRController" parent="Players/PlayerMe"]
transform = Transform( 0.767001, 0.400294, -0.501471, -0.0509248, -0.741098, -0.669463, -0.639621, 0.539016, -0.548038, 0, 0.83845, 0 )

[node name="HandLeft" type="Spatial" parent="Players/PlayerMe"]
transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 7 )

[node name="HandRightController" type="ARVRController" parent="Players/PlayerMe"]
transform = Transform( -0.300739, 0, -0.953706, 0, 1, 0, 0.953706, 0, -0.300739, 0.464386, 0.654886, 0 )
controller_id = 2

[node name="HandRight" type="Spatial" parent="Players/PlayerMe"]
script = ExtResource( 7 )

[node name="Doppelganger" type="Spatial" parent="Players"]
transform = Transform( -0.866514, 0, 0.499153, 0, 1, 0, -0.499153, 0, -0.866514, 0.432, 0.083, -0.76 )

[node name="HandRight" type="Spatial" parent="Players/Doppelganger"]
transform = Transform( 1, 0, -5.96046e-08, 0, 1, 0, 5.96046e-08, 0, 1, 0, 0.940959, 0 )
script = ExtResource( 7 )

[node name="Environment" type="Spatial" parent="."]

[node name="Boat" type="MeshInstance" parent="Environment"]
transform = Transform( 0.350665, 0, -0.936501, 0, 1, 0, 0.936501, 0, 0.350665, -1.22333, 0.371836, -3.31469 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Environment/Boat"]
transform = Transform( 0.2, 0, 2.98023e-08, 0, 1, 0, -4.47035e-08, 0, 1, 0.068301, 0.96186, 0.333269 )
mesh = SubResource( 24 )
material/0 = null

[node name="Floor" type="MeshInstance" parent="Environment"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="WavyFloor" type="MeshInstance" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58503, 0.281997, -4.36416 )
mesh = SubResource( 25 )
material/0 = SubResource( 27 )

[node name="StaticBody" type="StaticBody" parent="Environment"]
transform = Transform( 0.837242, -0.145077, -0.527237, 0, 0.964165, -0.265304, 0.546833, 0.222123, 0.807239, 0.214954, 0.627688, -0.661672 )

[node name="CollisionShape" type="CollisionShape" parent="Environment/StaticBody"]
shape = SubResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="Environment/StaticBody/CollisionShape"]
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Rope" type="Spatial" parent="Environment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198192, 1.09148, 0 )
script = ExtResource( 8 )

[node name="StaticBody" type="StaticBody" parent="Environment/Rope"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Environment/Rope/StaticBody"]
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="Environment/Rope/StaticBody/CollisionShape"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="Tail" type="Spatial" parent="Environment/Rope/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0167217, 0 )

[node name="DirectionalLight" type="OmniLight" parent="."]
transform = Transform( 0.873458, -0.310712, 0.374872, 0.0957231, 0.864473, 0.493481, -0.477397, -0.395151, 0.784824, -0.0269345, 1.7923, 0.839948 )
visible = false
shadow_enabled = true
omni_range = 9.4
omni_attenuation = 0.933033

[node name="BodyObjects" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="Finger1Kinematic" type="KinematicBody" parent="BodyObjects"]
transform = Transform( 1, -4.47035e-08, -1.19209e-07, 7.45058e-09, 1, 2.54251e-07, -4.47035e-08, -7.82311e-08, 1, 0, 0.512868, -0.196512 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="BodyObjects/Finger1Kinematic"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -0.02, 0, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="BodyObjects/Finger1Kinematic/CollisionShape"]
mesh = SubResource( 14 )
material/0 = SubResource( 15 )

[node name="Finger1" type="Spatial" parent="BodyObjects"]
transform = Transform( 0.778696, 0.323846, -0.537358, -0.166833, -0.718767, -0.674936, -0.60481, 0.615221, -0.505673, 0.130757, 0.756109, -0.113734 )

[node name="Area" type="Area" parent="BodyObjects/Finger1"]
transform = Transform( 1, -4.47035e-08, -1.19209e-07, 7.45058e-09, 1, 2.54251e-07, -4.47035e-08, -7.82311e-08, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BodyObjects/Finger1/Area"]
shape = SubResource( 16 )

[node name="MeshInstance" type="MeshInstance" parent="BodyObjects/Finger1/Area/CollisionShape"]
mesh = SubResource( 17 )
material/0 = SubResource( 18 )

[node name="MeshInstance" type="MeshInstance" parent="BodyObjects/Finger1"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
visible = false
mesh = SubResource( 19 )
material/0 = SubResource( 20 )

[node name="Finger2" type="Spatial" parent="BodyObjects"]
transform = Transform( -0.348733, 0.935879, 0.0501601, 0.109344, -0.0125266, 0.993925, 0.930821, 0.352099, -0.0979648, 0.511059, 0.674311, -0.184403 )

[node name="MeshInstance" type="MeshInstance" parent="BodyObjects/Finger2"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 21 )

[node name="Finger3" type="Spatial" parent="BodyObjects"]
transform = Transform( -0.348733, 0.935879, 0.0501601, 0.109344, -0.0125266, 0.993925, 0.930821, 0.352099, -0.0979648, 0.511059, 0.674311, -0.184403 )

[node name="MeshInstance" type="MeshInstance" parent="BodyObjects/Finger3"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 21 )

[node name="Finger4" type="Spatial" parent="BodyObjects"]
transform = Transform( -0.348733, 0.935879, 0.0501601, 0.109344, -0.0125266, 0.993925, 0.930821, 0.352099, -0.0979648, 0.511059, 0.674311, -0.184403 )

[node name="MeshInstance" type="MeshInstance" parent="BodyObjects/Finger4"]
transform = Transform( -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 19 )
material/0 = SubResource( 21 )

[node name="ClickSound" type="AudioStreamPlayer3D" parent="BodyObjects"]
stream = ExtResource( 3 )

[node name="HissSound" type="AudioStreamPlayer3D" parent="BodyObjects"]
stream = ExtResource( 5 )
bus = "Hiss"

[node name="Laser" type="Spatial" parent="BodyObjects"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.123079, 0 )

[node name="MeshInstance" type="MeshInstance" parent="BodyObjects/Laser"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )
mesh = SubResource( 22 )
material/0 = SubResource( 23 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 0.999305, 0, 0.037289, 0, 1, 0, -0.037289, 0, 0.999305, 1.76675, 3.38094, -2.47917 )
shadow_enabled = true
omni_range = 12.1

[node name="MeshInstance" type="MeshInstance" parent="OmniLight"]
mesh = SubResource( 28 )
material/0 = SubResource( 29 )
[connection signal="body_shape_entered" from="BodyObjects/Finger1/Area" to="BodyObjects" method="_on_Area_body_shape_entered"]
[connection signal="body_shape_exited" from="BodyObjects/Finger1/Area" to="BodyObjects" method="_on_Area_body_shape_exited"]
[connection signal="finished" from="BodyObjects/HissSound" to="BodyObjects" method="_on_HissSound_finished"]
